--- a/sachith-portfolio/package.json
+++ b/sachith-portfolio/package.json
@@ -13,6 +13,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-scroll-up-button": "^1.6.4",
     "react-typical": "^0.1.3",
     "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^2.1.4"
